--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "tslint.json",
   "analyze": true,
   "dependencies": {
+    "memoize-decorator": "^1.0.2",
     "toposort": "^1.0.3",
     "tsutils": "^1.4.0"
   },
