--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "outDir": "dist/src",
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "experimentalDecorators": true
   },
   "include": [
     "src"
