--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "load-grunt-tasks": "3.2.0",
     "mocha": "2.2.5",
     "time-grunt": "1.2.1",
-    "tslint": "^5.1.0",
+    "tslint": "5.1.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "^2.4.2",
     "underscore": "1.8.3"
   },
   "peerDependencies": {
-    "tslint": ">=5.6.0"
+    "tslint": ">=5.1.0"
   },
   "scripts": {
     "test": "grunt all",
