--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-tslint": "5.0.1",
     "load-grunt-tasks": "3.2.0",
     "mocha": "2.2.5",
+    "strip-indent": "^2.0.0",
     "time-grunt": "1.2.1",
     "tslint": "5.1.0",
     "tslint-microsoft-contrib": "^5.0.1",
