--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "devDependencies": {
     "chai": "3.2.0",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-copy": "0.8.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-mocha-test": "0.12.7",
-    "grunt-ts": "5.5.1",
-    "grunt-tslint": "5.0.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-mocha-test": "0.13.2",
+    "grunt-ts": "^6.0.0-beta.16",
+    "grunt-tslint": "^5.0.1",
     "load-grunt-tasks": "3.2.0",
     "mocha": "2.2.5",
     "strip-indent": "^2.0.0",
