--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "analyze": true,
   "dependencies": {
     "memoize-decorator": "^1.0.2",
-    "tsutils": "^1.4.0"
+    "tsutils": "2.7.1"
   },
   "devDependencies": {
     "chai": "3.2.0",
@@ -15,7 +15,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "0.13.2",
-    "grunt-ts": "^6.0.0-beta.16",
+    "grunt-ts": "^6.0.0-beta.17",
     "grunt-tslint": "^5.0.1",
     "load-grunt-tasks": "3.2.0",
     "mocha": "2.2.5",
@@ -23,7 +23,7 @@
     "time-grunt": "1.2.1",
     "tslint": "5.1.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.5.2",
+    "typescript": "2.4.2",
     "underscore": "1.8.3"
   },
   "peerDependencies": {
