--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "tsutils": "2.7.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.6",
+    "@types/react": "^15.6.14",
+    "@types/underscore": "^1.8.7",
     "chai": "3.2.0",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
@@ -23,7 +28,7 @@
     "time-grunt": "1.2.1",
     "tslint": "5.1.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "2.4.2",
+    "typescript": "^2.4.2",
     "underscore": "1.8.3"
   },
   "peerDependencies": {
